# medium

Multiplatform-App/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
Patterns/Observer/ChatRoom/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  Message.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  README.md  main.cpp
Patterns/Observer/Eventor/: CMakeLists.txt  Event.cpp  Event.h  README.md  main.cpp
Patterns/Observer/Eventor/Observable/: ErrorEventor.cpp  ErrorEventor.h  GeneralEventor.cpp  GeneralEventor.h  Observable.cpp  Observable.h
Patterns/Observer/Eventor/Observer/: BrakeObserver.cpp  BrakeObserver.h  DashboardObserver.cpp  DashboardObserver.h  GeneralObserver.cpp  GeneralObserver.h  Observer.cpp  Observer.h
Patterns/Visitor/: CMakeLists.txt  Earn.cpp  Earn.h  Operation.h  Pay.cpp  Pay.h  User.h  main.cpp
Patterns/Visitor/Tiers/: Bronze.cpp  Bronze.h  Gold.cpp  Gold.h  Silver.cpp  Silver.h  Tier.h  Tiers.h
Patterns/Visitor/Visitors/: CashbackVisitor.cpp  CashbackVisitor.h  RewardVisitor.cpp  RewardVisitor.h
